--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
         <meta charset="UTF-8">
         <title>Khảo sát</title>
     </head>
-    <body style="background-color: aquamarine; font-family: "Segoe UI, Arial, sans-serif;">
+    <body style="background-color: aquamarine; font-family: 'Segoe UI', Arial, sans-serif;">
         <h1 style="text-align: center; font-size: 45px;"><b>Biểu mẫu khảo sát</b></h1>
-        <div style="background-color: white; padding: 12px; margin-left: 15px; margin-right: 15px; border: solid 2px;">
-            <form style="font-size: 25px; margin-left: 12px;">
+        <div style=" 
+            background-color: white;
+            padding: 20px;
+            max-width: 800px;
+            margin: 20px auto;
+            border: solid 2px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);">
+            <form style="font-size: 25px; margin-left: 13px;">
                 <p>
                     <label for="name"><b>Họ tên</b></label> <br>
                     <input type="text" name="name" id="name" placeholder="Nhập tên của bạn" size="65" style="font-size: 20px; margin-top: 5px; padding: 10px;">
@@ -45,7 +52,7 @@
                    </div>
                  </p>
                  <p>
-                    <label for="comment"><b>Bạn có câu hỏi gì cho ITviec không?</b></label>
+                    <label for="comment"><b>Bạn có câu hỏi gì cho ITviec không?</b></label> <br>
                     <textarea name="comment" id="comment" placeholder="Enter your comment here" rows="4" cols="70" style="font-size: 20p; margin-top: 5px; padding: 10px;"></textarea>
                  </p>
             </form>
